# mysql-to-pg-migration

./: MIGRATION_CSV_README.md  README.md  app.py  app_streamlit.py  config.json  config.json.example  docker-compose.yml  fix_indentation.py  metadata.json  progress.json  pyproject.toml  run.sh
dbmigrator/configuration_management/: utils.py
dbmigrator/data_access/: metadata_models.py  mysql_data_access.py  mysql_metadata_reader.py  postgresql_data_access.py
dbmigrator/data_migration/: case_sensitive.py  mysql_to_postgresql.py  partial_table_migration.py  pg_to_pg_csv.py
dbmigrator/data_migration/database_connections/: postgresql_connection.py
dbmigrator/migration_logging/progress_log/runner/: runner.py
dbmigrator/structure_conversion/: column_type_mapping.py  csv_utils.py  dependency_resolver.py  table_to_json.py  table_to_sql.py
docker/: manage.ps1  manage.sh
docker/mysql/init/: 01-schema-and-data.sql  02-optional-disable-only-full-group-by.sql
docker/postgres/init/: 01-setup.sql
docs/: ONLY_FULL_GROUP_BY_FIX.md
pages/: 10_🔢_Sequences.py  11_💾_Backup.py  12_✅_Validate.py  13_🔄_PG_to_PG.py  13_🔄_PG_to_PG_OLD.py.bak  1_🔌_Connection.py  2_⚙️_Configure.py  3_📊_Conversion.py  4_🗂️_Tables.py  5_📦_Tuples.py  6_⚡_Partial_Migration.py  7_🔑_Primary_Keys.py  8_🔗_Constraints.py  9_📑_Indexes.py  __init__.py
static/css/: styles.css
static/js/: scripts.js
templates/: index.html
