[tool.poetry]
name = "dbmigrator"
version = "0.1.0"
description = ""
authors = ["BX2"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mysql-connector-python = "^8.3.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
flask = "^2.1.0"
flask-socketio = "^5.1.0"
flask-cors = "^4.0.0"  
eventlet = "^0.35.0" 
rich = "^13.7.0"
streamlit = "^1.29.0"  


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
